--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,13 @@
     <title>KØBENHAVNERBILLEDER</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body style="background-color: #cccccc" class="dark:">
+  <body class="dark:bg-black bg-accent">
+    <div class="grid place-content-end">
+      <button id="toogle-btn" class="m-4 w-10">toogle</button>
+      <img src="img/moon.webp" alt="" width="50px" />
+    </div>
     <div class="grid place-items-center p-8">
-      <h1 class="text-6xl font-bold text-green-900/75">KØBENHAVNERBILLEDER</h1>
+      <h1 class="pl-16 font-yourGrace text-7xl text-secondary">KØBENHAVNERBILLEDER</h1>
       <p class="py-4 pl-80 text-4xl">- en guide til hipster foto</p>
       <p style="margin-left: 36rem">af Sten Simons</p>
     </div>
@@ -17,19 +21,19 @@
       <img src="img/Layer2.png" alt="herobillede" />
     </div>
     <div class="m-2 grid place-content-center">
-      <button class="grid aspect-square h-20 w-96 place-content-center rounded-full bg-green-900/50 p-6">
+      <button class="grid aspect-square h-20 w-96 place-content-center rounded-full bg-primary p-6">
         <p class="place-items-center text-2xl font-bold">KØB HER</p>
       </button>
     </div>
-    <div class="m-32 grid grid-cols-4">
-      <div class="col-span-2 col-start-2 mb-64">
-        <p class="text-2xl italic leading-relaxed">Københavnerbilleder er de danske streetfotografers bibel: Det er en fusion mellem et kunstværk og en lærebog. Bogen gennemgår alle væsentlige aspekter af streetfotografering fra grundlæggende teknik til kreative eksperimenter. Alt sammen krydret med masser af inspirerende fotos. God læselyst!</p>
+    <div class="m-32 grid grid-cols-6">
+      <div class="col-span-4 col-start-2 mb-64">
+        <p class="text-xl italic leading-relaxed">Københavnerbilleder er de danske streetfotografers bibel: Det er en fusion mellem et kunstværk og en lærebog. Bogen gennemgår alle væsentlige aspekter af streetfotografering fra grundlæggende teknik til kreative eksperimenter. Alt sammen krydret med masser af inspirerende fotos. God læselyst!</p>
       </div>
 
-      <div class="col-span-2 col-start-2 mb-80 grid h-36 place-content-center">
-        <div class="aspect-square rounded-3xl bg-green-900/50">
-          <h2 class="mt-10 mb-10 grid place-content-center text-2xl font-bold">FAKTA OM BOGEN</h2>
-          <div class="ml-10 text-2xl leading-relaxed">
+      <div class="col-span-5 col-start-2 mb-80 grid h-36 place-content-center">
+        <div class="aspect-square rounded-3xl bg-primary">
+          <h2 class="mt-10 mb-10 grid place-content-center font-yourGrace text-4xl">FAKTA OM BOGEN</h2>
+          <div class="ml-10 text-xl leading-relaxed">
             <ul>
               <li>Titel: Københavnerbilleder - en guide til hipster foto</li>
               <li>Forfatter: Sten Simons</li>
@@ -42,14 +46,14 @@
         </div>
       </div>
 
-      <div class="col-span-2 col-start-2">
+      <div class="col-span-4 col-start-2">
         <div class="grid place-content-center">
-          <p class="m-8 text-2xl font-bold">ANMELDELSER AF BOGEN</p>
+          <p class="m-8 font-yourGrace text-4xl">ANMELDELSER AF BOGEN</p>
         </div>
         <div class="mb-4 w-1/3">
           <img src="img/5udaf6.png" alt="herobillede" />
         </div>
-        <div class="mb-4 text-2xl">
+        <div class="mb-4 text-xl">
           <p>Københavnerbilleder er en grundig introduktion til at skyde billeder med retro-kant. Hvad enten du er har arbejdet med foto siden 135-filmen kom på markedet, du kun har skudt digitalt eller er helt nybegynder, er der masser af tips og tricks i bogen.</p>
           <p class="my-4">Hanne Hovgaard, Berlingeren</p>
         </div>
@@ -57,7 +61,7 @@
           <img src="img/4udaf5.png" alt="herobillede" />
         </div>
 
-        <div class="mb-4 text-2xl">
+        <div class="mb-4 text-xl">
           <p>Teksten er underholdende, og billederne er sku’ flotte. Hvad mere skal man sige om en fotobog?</p>
           <p class="my-4">Kim Kloggaard, Fotojournalen.dk</p>
         </div>
@@ -66,23 +70,23 @@
           <img src="img/6af6.png" alt="herobillede" />
         </div>
 
-        <div class="mb-4 text-2xl">
+        <div class="mb-4 text-xl">
           <p>Simons kan det der - og han bliver bedre og bedre. Stens tredje fotobog er klart den bedste - her er han for alvor i sit rette element, meget bedre end “studiefotografering som begyndere.” Tillykke - godt arbejde.</p>
           <p class="my-4">Volmer Hansen, Lukkertiden.dk</p>
         </div>
       </div>
 
-      <div class="col-span-2 col-start-2">
+      <div class="col-span-2 col-start-3">
         <div class="grid place-content-center">
-          <p class="m-8 mt-16 text-2xl font-bold">FORFATTEREN</p>
+          <p class="m-8 mt-16 font-yourGrace text-4xl">FORFATTEREN</p>
         </div>
       </div>
 
-      <div class="col-span-1 col-start-2">
+      <div class="col-span-2 col-start-2">
         <img src="img/sten_simons.jpg" alt="herobillede" />
       </div>
 
-      <div class="col-span-1 col-start-3 ml-4 text-2xl">
+      <div class="col-span-2 col-start-4 ml-4 text-xl">
         <p>Sten Simons har en lang foto-karriere bag sig. Det hele startede i 00’erne, da han gik rundt i Pisserenden for at fotografere ungdommens forfald. Det ledte til en række udstillinger, og blev senere til hans først fotobog “Ungdomsdruk - pinlige billeder fra nattelivet.” Derefter tog karrieren fart: Han blev fotojournalist og dokumenterede en masse dagligdagsstof fra Amager på dagbladet “Amagerkaneren.” Sideløbende begyndte han at undervise i foto, og har skrevet et utal af bøger, herunder bestsellerne Scener fra S-toget, Brun mad - en visuel odysse, og lærebogen Fotografering for evnesvage.</p>
       </div>
       <div class="col-span-1 col-start-2 mt-2">
@@ -91,8 +95,8 @@
     </div>
 
     <div class="grid grid-cols-5 place-content-center gap-8">
-      <div class="col-span-1 col-start-3 grid">
-        <p class="m-8 mt-16 text-2xl font-bold">BOGENS KAPITLER</p>
+      <div class="col-span-2 col-start-3 grid">
+        <p class="m-8 mt-16 font-yourGrace text-4xl">BOGENS KAPITLER</p>
       </div>
 
       <div class="col-span-1 col-start-2 place-content-center">
@@ -137,20 +141,20 @@
         <p></p>
       </div>
 
-      <div class="col-span-1 col-start-1 place-content-center">
+      <div class="col-span-1 col-start-3 place-content-center">
         <p>Kapitel 8</p>
         <p></p>
         <p></p>
       </div>
 
-      <div class="col-span-1 col-start-1 place-content-center">
+      <div class="col-span-1 col-start-5 place-content-center">
         <p></p>
         <p></p>
         <p></p>
       </div>
 
-      <div class="col-span-1 col-start-3 grid">
-        <p class="m-8 mt-16 text-2xl font-bold">BILLEDER FRA BOGEN</p>
+      <div class="col-span-2 col-start-3 grid place-content-center">
+        <p class="m-8 mt-16 font-yourGrace text-4xl">BILLEDER FRA BOGEN</p>
       </div>
 
       <div class="col-span-1 col-start-2 place-content-center">
